# My3DGameFramework

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
AssetConverter/: CMakeLists.txt  main.cpp  pch.cpp  pch.h
AssetConverter/AssetTypes/: AssetFormat.cpp  AssetFormat.h  AssetUtils.cpp  AssetUtils.h  AssetUtils.inl  RawAnimData.cpp  RawAnimData.h  RawBone.cpp  RawBone.h  RawImage.cpp  RawImage.h  RawMaterial.cpp  RawMaterial.h  RawMesh.cpp  RawMesh.h  RawModel.cpp  RawModel.h  RawTexture.cpp  RawTexture.h  RawVertex.cpp  RawVertex.h
AssetConverter/Converters/: AnimConverter.cpp  AnimConverter.h  AnimationConverter.cpp  AnimationConverter.h  KTXCubeMapConverter.cpp  KTXCubeMapConverter.h  KTXTextureConverter.cpp  KTXTextureConverter.h  ModelConverter.cpp  ModelConverter.h  ORMTexturePacker.cpp  ORMTexturePacker.h
AssetConverter/Managers/: ThreadManager.cpp  ThreadManager.h
AssetConverter/Tools/: gui_window.py  main.py
AssetConverter/Utils/: AnimChannel.cpp  AnimChannel.h  ArgumentParser.cpp  ArgumentParser.h  ConverterUtils.h  Defines.h  Logger.cpp  Logger.h  Pose.cpp  Pose.h  Types.h  Utils.cpp  Utils.h
AssetImporter/: CMakeLists.txt
Engine/: CMakeLists.txt  EnginePch.cpp  EnginePch.h  Game.cpp  Game.h
Engine/AI/: CMakeLists.txt
Engine/AppFramework/: CMakeLists.txt
Engine/Audios/: AudioClip.cpp
Engine/Components/: Animator.cpp  Animator.h  AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  CapsuleCollider.h  Collider.cpp  Collider.h  Component.cpp  Component.h  DirectionalLight.cpp  DirectionalLight.h  InstancedMeshRenderer.cpp  InstancedMeshRenderer.h  Light.cpp  Light.h  MeshOutline.cpp  MeshOutline.h  MeshRenderer.cpp  MeshRenderer.h  PhysicsComponent.cpp  PhysicsComponent.h  PointLight.cpp  PointLight.h  Rigidbody.cpp  Rigidbody.h  Script.cpp  Script.h  Script.inl  SkinnedMeshRenderer.cpp  SkinnedMeshRenderer.h  SkyLight.h  SphereCollider.cpp  SphereCollider.h  SpotLight.cpp  (+7 more)
Engine/Config/: AssetConfig.json  DefaultShaders.json  EngineConfig.json  MaterialConfig.json  ResourceConfig.json
Engine/Core/: Application.cpp  Application.h  Application.inl  CMakeLists.txt  Context.cpp  Context.h  EngineConfigurator.cpp  EngineConfigurator.h  GameObject.cpp  GameObject.h  GlobalUniforms.cpp  GlobalUniforms.h  Importer.cpp  Importer.h  RenderContext.cpp  RenderContext.h  RenderPass.cpp  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  Renderer.cpp  Renderer.h  ResourceLoader.cpp  ResourceLoader.h  ResourceParser.cpp  ResourceParser.h  Scene.cpp  Scene.h  StandardRenderPipeline.cpp  StandardRenderPipeline.h
Engine/Editor/: CMakeLists.txt
Engine/Engine/: CMakeLists.txt
Engine/Framebuffers/: BRDFLookUpFramebuffer.cpp  BRDFLookUpFramebuffer.h  EffectFramebuffer.cpp  EffectFramebuffer.h  Framebuffer.cpp  Framebuffer.h  FramebufferBase.cpp  FramebufferBase.h  GBufferFramebuffer.cpp  GBufferFramebuffer.h  MSAAFramebuffer.cpp  MSAAFramebuffer.h  OutlineFramebuffer.cpp  OutlineFramebuffer.h  PostProcessFrameBuffer.cpp  PostProcessFrameBuffer.h  SSAOFramebuffer.cpp  SSAOFramebuffer.h
Engine/GameObject/: ComponentManager.cpp  ComponentManager.h  GameObject.cpp  GameObjectRegistry.cpp  GameObjectRegistry.h  ObjectValidator.cpp  ObjectValidator.h  ScriptRegistry.cpp  ScriptRegistry.h
Engine/Graphics/: Animation.cpp  Animation.h  AnimationChannel.h  AnimationClip.cpp  AnimationClip.h  Bone.cpp  Bone.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Context.cpp  Context.h  CubeFramebuffer.cpp  CubeFramebuffer.h  CubeTexture.cpp  CubeTexture.h  FrameBuffer.cpp  FrameBuffer.h  Frustum.cpp  Frustum.h  Geometry.cpp  Geometry.h  GlobalUniforms.cpp  IBLUtils.cpp  Image.cpp  Image.h  InstancedMesh.cpp  InstancedMesh.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Pose.h  Program.cpp  Program.h  Ray.cpp  RaycastHit.cpp  RenderContext.cpp  (+30 more)
Engine/Importers/: AnimationImporter.cpp  AudioImporter.cpp  AudioImporter.h  CMakeLists.txt  EngineImporters.h  FontImporter.cpp  Importer.cpp  ModelImporter.cpp  ScriptImporter.h  ShaderImporter.cpp  TextureImporter.cpp  TextureImporter.h
Engine/Input/: CMakeLists.txt
Engine/InputSystem/: CMakeLists.txt
Engine/Instancing/: InstanceBuffer.cpp  InstanceBuffer.h  InstanceProperty.h  RenderBatch.cpp  RenderBatch.h  RenderQueue.cpp  RenderQueue.h  SkinnedRenderQueue.cpp  SkinnedRenderQueue.h  StaticRenderQueue.cpp  StaticRenderQueue.h
Engine/Managers/: AudioManager.cpp  AudioManager.h  DataManager.cpp  DataManager.h  EntityManager.cpp  FileManager.cpp  FileManager.h  FileManager.inl  InputManager.cpp  InputManager.h  InputManager.inl  InstanceManager.cpp  InstanceManager.h  Logger.h  LuaManager.cpp  ObjectManager.cpp  ObjectManager.h  ObjectManager.inl  PhysicsManager.cpp  PhysicsManager.h  RenderManager.cpp  RenderManager.h  ResourceManager.cpp  ResourceManager.h  ResourceManager.inl  SceneManager.cpp  SceneManager.h  TimeManager.cpp  TimeManager.h  UIManager.cpp  UIManager.h  WindowManager.cpp  WindowManager.h
Engine/Misc/: AssetFormat.cpp  AssetFormat.h  AssetUtils.cpp  AssetUtils.h  Defines.h  EngineDir.h  Enums.h  IBLUtils.cpp  IBLUtils.h  ImguiManager.cpp  ImguiManager.h  LuaBindings.cpp  LuaBindings.h  PhysicsHelper.cpp  PhysicsHelper.h  ResourceFormat.cpp  ResourceFormat.h  ResourceJsonFormat.cpp  ResourceJsonFormat.h  ResourceJsonKeys.h  Types.h  Utils.cpp  Utils.h  Utils.inl
Engine/NavMesh/: NavMeshFunctors.cpp  NavMeshFunctors.h  NavigationManager.cpp  NavigationManager.h
Engine/Object/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  GameObject.inl  Object.h  ScriptRegistry.h
Engine/Parsers/: JsonParser.cpp  JsonParser.h  JsonParser.inl  LuaParser.inl  Parser.cpp  Parser.h  YamlParser.cpp  YamlParser.h  YamlParser.inl
Engine/Physics/: BPLayerInterface.cpp  BPLayerInterface.h  CMakeLists.txt  (+15 more)
Game/: AppRegistry.h  CMakeLists.txt  My3DGameFramework.cpp  My3DGameFramework.h  main.cpp  pch.h
LibTesters/: CMakeLists.txt  GamePch.h  main.cpp  pch.h
My3DGameFramework/: CMakeLists.txt
(+2048 files in other folders)
